Fixed: Bug 34612 - Missing padding in mail list view

--- a/ui/apps/io.ox/mail/style.less
+++ b/ui/apps/io.ox/mail/style.less
@@ -128,8 +128,8 @@
     &.column-1 { width: @icon-width; text-align: center; }
     &.column-2 { width: @icon-width; text-align: center; }
     &.column-3 { width: @icon-width; text-align: center; }
-    &.column-4 { width: 35%; }
-    &.column-5 { width: 55%; }
+    &.column-4 { width: 35%; padding-right: 10px; }
+    &.column-5 { width: 55%; padding-right: 10px; }
     &.column-6 { width: 140px; text-align: right; }
 }
 
